STANDARD IMAGE COMMIT

--- a/standardmodel.html
+++ b/standardmodel.html
@@ -30,7 +30,7 @@
         
       </div>
       <div class="card-body">
-        <img src="https%3A%2F%2Fplus.maths.org%2Fcontent%2Fcharmed-beauty-confirms-particle-theory&psig=AOvVaw0AEGxE_8wZaPysuqVMU113&ust=1669731662867000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCMiAnqiJ0fsCFQAAAAAdAAAAABAM" alt="The Standard Model Picture"/>
+        <img src="standardmodel.png" alt="The Standard Model Picture"/>
         <p>The picture that you would see above, if it chose to render, is a list of all of the particles in modern day physics. There are a bunch, but let me list them
         <ul>
           <li>
